--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2.3\n",
+      "{\n",
+      "  \"Compilers\": {\n",
+      "    \"c\": {\n",
+      "      \"name\": \"msvc\",\n",
+      "      \"linker\": \"link\",\n",
+      "      \"version\": \"19.29.30158\",\n",
+      "      \"commands\": \"cl\"\n",
+      "    },\n",
+      "    \"cython\": {\n",
+      "      \"name\": \"cython\",\n",
+      "      \"linker\": \"cython\",\n",
+      "      \"version\": \"3.0.12\",\n",
+      "      \"commands\": \"cython\"\n",
+      "    },\n",
+      "    \"c++\": {\n",
+      "      \"name\": \"msvc\",\n",
+      "      \"linker\": \"link\",\n",
+      "      \"version\": \"19.29.30158\",\n",
+      "      \"commands\": \"cl\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Machine Information\": {\n",
+      "    \"host\": {\n",
+      "      \"cpu\": \"x86_64\",\n",
+      "      \"family\": \"x86_64\",\n",
+      "      \"endian\": \"little\",\n",
+      "      \"system\": \"windows\"\n",
+      "    },\n",
+      "    \"build\": {\n",
+      "      \"cpu\": \"x86_64\",\n",
+      "      \"family\": \"x86_64\",\n",
+      "      \"endian\": \"little\",\n",
+      "      \"system\": \"windows\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Build Dependencies\": {\n",
+      "    \"blas\": {\n",
+      "      \"name\": \"scipy-openblas\",\n",
+      "      \"found\": true,\n",
+      "      \"version\": \"0.3.28\",\n",
+      "      \"detection method\": \"pkgconfig\",\n",
+      "      \"include directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/include\",\n",
+      "      \"lib directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/lib\",\n",
+      "      \"openblas configuration\": \"OpenBLAS 0.3.28  USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell MAX_THREADS=24\",\n",
+      "      \"pc file directory\": \"D:/a/numpy/numpy/.openblas\"\n",
+      "    },\n",
+      "    \"lapack\": {\n",
+      "      \"name\": \"scipy-openblas\",\n",
+      "      \"found\": true,\n",
+      "      \"version\": \"0.3.28\",\n",
+      "      \"detection method\": \"pkgconfig\",\n",
+      "      \"include directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/include\",\n",
+      "      \"lib directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/lib\",\n",
+      "      \"openblas configuration\": \"OpenBLAS 0.3.28  USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell MAX_THREADS=24\",\n",
+      "      \"pc file directory\": \"D:/a/numpy/numpy/.openblas\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Python Information\": {\n",
+      "    \"path\": \"C:\\\\Users\\\\runneradmin\\\\AppData\\\\Local\\\\Temp\\\\build-env-k51dk6fd\\\\Scripts\\\\python.exe\",\n",
+      "    \"version\": \"3.11\"\n",
+      "  },\n",
+      "  \"SIMD Extensions\": {\n",
+      "    \"baseline\": [\n",
+      "      \"SSE\",\n",
+      "      \"SSE2\",\n",
+      "      \"SSE3\"\n",
+      "    ],\n",
+      "    \"found\": [\n",
+      "      \"SSSE3\",\n",
+      "      \"SSE41\",\n",
+      "      \"POPCNT\",\n",
+      "      \"SSE42\",\n",
+      "      \"AVX\",\n",
+      "      \"F16C\",\n",
+      "      \"FMA3\",\n",
+      "      \"AVX2\"\n",
+      "    ],\n",
+      "    \"not found\": [\n",
+      "      \"AVX512F\",\n",
+      "      \"AVX512CD\",\n",
+      "      \"AVX512_SKX\",\n",
+      "      \"AVX512_CLX\",\n",
+      "      \"AVX512_CNL\",\n",
+      "      \"AVX512_ICL\"\n",
+      "    ]\n",
+      "  }\n",
+      "}\n",
+      "None\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\GAMING\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\numpy\\__config__.py:155: UserWarning: Install `pyyaml` for better output\n",
+      "  warnings.warn(\"Install `pyyaml` for better output\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print (np.__version__)\n",
+    "print(np.show_config())\n",
+    "\n"
    ]
   },
   {
@@ -51,11 +159,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a= np.random.randint(5, size=(2,3,5))\n"
    ]
   },
   {
@@ -68,11 +177,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[2 1 4 1 2]\n",
+      "  [1 2 3 0 2]\n",
+      "  [2 4 2 1 3]]\n",
+      "\n",
+      " [[4 0 3 1 3]\n",
+      "  [1 3 1 1 1]\n",
+      "  [3 3 2 0 3]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)"
    ]
   },
   {
@@ -85,11 +209,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b=np.ones((5,2,3))\n"
    ]
   },
   {
@@ -102,11 +227,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +266,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array a shape: (2, 3, 5)\n",
+      "Array b shape: (5, 2, 3)\n",
+      "Do a and b have the same size? True\n",
+      "Do a and b have the same shape? False\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "same_size = a.size == b.size\n",
+    "same_shape = a.shape == b.shape\n",
+    "\n",
+    "print(\"Array a shape:\", a.shape)\n",
+    "print(\"Array b shape:\", b.shape)\n",
+    "print(\"Do a and b have the same size?\", same_size)\n",
+    "print(\"Do a and b have the same shape?\", same_shape)"
    ]
   },
   {
@@ -136,11 +302,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of a: (2, 3, 5)\n",
+      "Shape of b: (5, 2, 3)\n",
+      "Can a and b be added? True\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "can_add = a.shape == b.shape or (a.shape[0] == b.shape[1] and a.shape[1] == b.shape[2])\n",
+    "\n",
+    "print(\"Shape of a:\", a.shape)\n",
+    "print(\"Shape of b:\", b.shape)\n",
+    "print(\"Can a and b be added?\", can_add)"
    ]
   },
   {
@@ -154,11 +335,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of a: (2, 3, 5)\n",
+      "Shape of b: (5, 2, 3)\n",
+      "Shape of c: (2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "c = np.transpose(b, (1, 2, 0))  \n",
+    "\n",
+    "print(\"Shape of a:\", a.shape)\n",
+    "print(\"Shape of b:\", b.shape)\n",
+    "print(\"Shape of c:\", c.shape)"
    ]
   },
   {
@@ -171,11 +368,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of a: (2, 3, 5)\n",
+      "Shape of c: (2, 3, 5)\n",
+      "Shape of d (sum): (2, 3, 5)\n",
+      "Sum array d:\n",
+      " [[[3. 2. 5. 2. 3.]\n",
+      "  [2. 3. 4. 1. 3.]\n",
+      "  [3. 5. 3. 2. 4.]]\n",
+      "\n",
+      " [[5. 1. 4. 2. 4.]\n",
+      "  [2. 4. 2. 2. 2.]\n",
+      "  [4. 4. 3. 1. 4.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d = a + c\n",
+    "\n",
+    "print(\"Shape of a:\", a.shape)\n",
+    "print(\"Shape of c:\", c.shape)\n",
+    "print(\"Shape of d (sum):\", d.shape)\n",
+    "print(\"Sum array d:\\n\", d)\n"
    ]
   },
   {
@@ -188,12 +409,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array a:\n",
+      " [[[2 1 4 1 2]\n",
+      "  [1 2 3 0 2]\n",
+      "  [2 4 2 1 3]]\n",
+      "\n",
+      " [[4 0 3 1 3]\n",
+      "  [1 3 1 1 1]\n",
+      "  [3 3 2 0 3]]]\n",
+      "Array d (a + c):\n",
+      " [[[3. 2. 5. 2. 3.]\n",
+      "  [2. 3. 4. 1. 3.]\n",
+      "  [3. 5. 3. 2. 4.]]\n",
+      "\n",
+      " [[5. 1. 4. 2. 4.]\n",
+      "  [2. 4. 2. 2. 2.]\n",
+      "  [4. 4. 3. 1. 4.]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "d = a + c\n",
+    "\n",
+    "print(\"Array a:\\n\", a)\n",
+    "print(\"Array d (a + c):\\n\", d)"
    ]
   },
   {
@@ -206,11 +454,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array a:\n",
+      " [[[2 1 4 1 2]\n",
+      "  [1 2 3 0 2]\n",
+      "  [2 4 2 1 3]]\n",
+      "\n",
+      " [[4 0 3 1 3]\n",
+      "  [1 3 1 1 1]\n",
+      "  [3 3 2 0 3]]]\n",
+      "Array c:\n",
+      " [[[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]]\n",
+      "Array e (a * c):\n",
+      " [[[2. 1. 4. 1. 2.]\n",
+      "  [1. 2. 3. 0. 2.]\n",
+      "  [2. 4. 2. 1. 3.]]\n",
+      "\n",
+      " [[4. 0. 3. 1. 3.]\n",
+      "  [1. 3. 1. 1. 1.]\n",
+      "  [3. 3. 2. 0. 3.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e = a * c\n",
+    "\n",
+    "print(\"Array a:\\n\", a)\n",
+    "print(\"Array c:\\n\", c)\n",
+    "print(\"Array e (a * c):\\n\", e)"
    ]
   },
   {
@@ -224,12 +508,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is e equal to a? True\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "are_equal = np.array_equal(e, a)\n",
+    "print(\"Is e equal to a?\", are_equal)\n"
    ]
   },
   {
@@ -243,12 +536,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max value in d: 5.0\n",
+      "Min value in d: 1.0\n",
+      "Mean value in d: 2.966666666666667\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "\n",
+    "print(\"Max value in d:\", d_max)\n",
+    "print(\"Min value in d:\", d_min)\n",
+    "print(\"Mean value in d:\", d_mean)"
    ]
   },
   {
@@ -261,11 +571,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of f: (2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f = np.empty(d.shape)\n",
+    "\n",
+    "print(\"Shape of f:\", f.shape)"
    ]
   },
   {
@@ -287,11 +608,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array f:\n",
+      " [[[ 75.  25. 100.  25.  75.]\n",
+      "  [ 25.  75.  75.   0.  75.]\n",
+      "  [ 75. 100.  75.  25.  75.]]\n",
+      "\n",
+      " [[100.   0.  75.  25.  75.]\n",
+      "  [ 25.  75.  25.  25.  25.]\n",
+      "  [ 75.  75.  75.   0.  75.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "for i in range(d.shape[0]):  \n",
+    "\n",
+    "    for j in range(d.shape[1]):     \n",
+    "\n",
+    "        for k in range(d.shape[2]): \n",
+    "\n",
+    "            if d[i][j][k] == d_min:\n",
+    "                f[i][j][k] = 0\n",
+    "\n",
+    "            elif d[i][j][k] == d_mean:\n",
+    "                f[i][j][k] = 50\n",
+    "\n",
+    "            elif d[i][j][k] > d_mean and d[i][j][k] < d_max:\n",
+    "                f[i][j][k] = 75\n",
+    "\n",
+    "            elif d[i][j][k] > d_min and d[i][j][k] < d_mean:\n",
+    "                f[i][j][k] = 25\n",
+    "                \n",
+    "            elif d[i][j][k] == d_max:\n",
+    "                f[i][j][k] = 100\n",
+    "\n",
+    "print(\"Array f:\\n\", f)"
    ]
   },
   {
@@ -325,11 +683,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array d:\n",
+      " [[[3. 2. 5. 2. 3.]\n",
+      "  [2. 3. 4. 1. 3.]\n",
+      "  [3. 5. 3. 2. 4.]]\n",
+      "\n",
+      " [[5. 1. 4. 2. 4.]\n",
+      "  [2. 4. 2. 2. 2.]\n",
+      "  [4. 4. 3. 1. 4.]]]\n",
+      "Array f:\n",
+      " [[[ 75.  25. 100.  25.  75.]\n",
+      "  [ 25.  75.  75.   0.  75.]\n",
+      "  [ 75. 100.  75.  25.  75.]]\n",
+      "\n",
+      " [[100.   0.  75.  25.  75.]\n",
+      "  [ 25.  75.  25.  25.  25.]\n",
+      "  [ 75.  75.  75.   0.  75.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "print(\"Array d:\\n\", d)\n",
+    "print(\"Array f:\\n\", f)"
    ]
   },
   {
@@ -350,11 +734,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array f with string labels:\n",
+      " [[['D', 'B', 'E', 'B', 'D'], ['B', 'D', 'D', 'A', 'D'], ['D', 'E', 'D', 'B', 'D']], [['E', 'A', 'D', 'B', 'D'], ['B', 'D', 'B', 'B', 'B'], ['D', 'D', 'D', 'A', 'D']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "### [your code here]\n",
+    "\n",
+    "for i in range(d.shape[0]):  \n",
+    "\n",
+    "    for j in range(d.shape[1]): \n",
+    "\n",
+    "        for k in range(d.shape[2]): \n",
+    "\n",
+    "            if d[i][j][k] == d_min:\n",
+    "                f[i][j][k] = 'A'  \n",
+    "\n",
+    "            elif d[i][j][k] == d_mean:\n",
+    "                f[i][j][k] = 'C'  \n",
+    "\n",
+    "            elif d[i][j][k] > d_mean and d[i][j][k] < d_max:\n",
+    "                f[i][j][k] = 'D'  \n",
+    "\n",
+    "            elif d[i][j][k] > d_min and d[i][j][k] < d_mean:\n",
+    "                f[i][j][k] = 'B'  \n",
+    "\n",
+    "            elif d[i][j][k] == d_max:\n",
+    "                f[i][j][k] = 'E'  \n",
+    "                \n",
+    "print(\"Array f with string labels:\\n\", f)"
    ]
   }
  ],
@@ -374,7 +790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
